fixed overflow of snow

--- a/resources/assets/sass/december.scss
+++ b/resources/assets/sass/december.scss
@@ -253,7 +253,7 @@ html {
   height: var(--size);
   background: white;
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   top: -5vh;
 }
 
@@ -262,7 +262,7 @@ html {
     transform: translate3d(var(--left-ini), 0, 0);
   }
   100% {
-    transform: translate3d(var(--left-end), 100vh, 0);
+    transform: translate3d(var(--left-end), 110vh, 0);
   }
 }
 
